update table/file structure

--- a/templates/admin/upload_file.html
+++ b/templates/admin/upload_file.html
@@ -10,9 +10,9 @@
 <table style="width: 100%; border-collapse: collapse; text-align: left; margin-top: 20px;">
     <thead>
         <tr>
-            <th style="border: 1px solid black; padding: 8px;">Question</th>
-            <th style="border: 1px solid black; padding: 8px;">Options</th>
-            <th style="border: 1px solid black; padding: 8px;">Correct Answer</th>
+            <th style="border: 1px solid black; padding: 8px;">question</th>
+            <th style="border: 1px solid black; padding: 8px;">options</th>
+            <th style="border: 1px solid black; padding: 8px;">correct_answer</th>
         </tr>
     </thead>
     <tbody>
