updated File Column Structure

--- a/templates/admin/upload_file.html
+++ b/templates/admin/upload_file.html
@@ -6,7 +6,7 @@
     <button type="submit" class="btn btn-primary">Upload</button>
 </form>
 
-<h1 style="text-align: center;">Quiz File Structure</h1>
+<h1 style="text-align: center;">Quiz File Structure [question|options|correct_answer]</h1>
 <table style="width: 100%; border-collapse: collapse; text-align: left; margin-top: 20px;">
     <thead>
         <tr>
